[gd_scene load_steps=15 format=3 uid="uid://3wjt4mg1ab42"]

[ext_resource type="Script" path="res://scripts/fight.gd" id="1_u3h0q"]
[ext_resource type="Texture2D" uid="uid://b7vij1q44oa4b" path="res://graphics/animals/dog.png" id="3_ovfvl"]
[ext_resource type="Texture2D" uid="uid://bh28w1e3onjcv" path="res://graphics/ui/fight/pet/pet_heart.png" id="4_4j4r4"]
[ext_resource type="Texture2D" uid="uid://cj0r454b8qnmf" path="res://graphics/shadow.png" id="4_dtwva"]
[ext_resource type="Texture2D" uid="uid://bbu2mesp10n80" path="res://graphics/ui/fight/stickerbook/stickerbook0000.png" id="5_h12cg"]
[ext_resource type="Texture2D" uid="uid://4apha2vltyoi" path="res://graphics/ui/fight/stickerbook/stickerbook0001.png" id="6_ekaih"]
[ext_resource type="Texture2D" uid="uid://bf4fm6ce01idn" path="res://graphics/ui/fight/stickerbook/stickerbook0002.png" id="7_au4u1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5mdvx"]
size = Vector3(5, 5, 6)

[sub_resource type="Curve" id="Curve_5jlgh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_b8hbm"]
curve = SubResource("Curve_5jlgh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vqhsh"]
direction = Vector3(0, 1, -1)
initial_velocity_min = 0.5
initial_velocity_max = 2.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_b8hbm")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_behbx"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("4_4j4r4")
texture_filter = 0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_b65ge"]
material = SubResource("StandardMaterial3D_behbx")

[sub_resource type="SpriteFrames" id="SpriteFrames_mu7b8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_h12cg")
}, {
"duration": 1.0,
"texture": ExtResource("6_ekaih")
}, {
"duration": 1.0,
"texture": ExtResource("5_h12cg")
}, {
"duration": 1.0,
"texture": ExtResource("6_ekaih")
}, {
"duration": 1.0,
"texture": ExtResource("5_h12cg")
}, {
"duration": 1.0,
"texture": ExtResource("6_ekaih")
}, {
"duration": 1.0,
"texture": ExtResource("5_h12cg")
}, {
"duration": 1.0,
"texture": ExtResource("6_ekaih")
}, {
"duration": 1.0,
"texture": ExtResource("5_h12cg")
}, {
"duration": 1.0,
"texture": ExtResource("6_ekaih")
}, {
"duration": 1.0,
"texture": ExtResource("7_au4u1")
}],
"loop": false,
"name": &"open",
"speed": 16.0
}]

[node name="FightArea" type="Area3D"]
collision_mask = 2
script = ExtResource("1_u3h0q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_5mdvx")

[node name="Animal" type="Sprite3D" parent="."]
layers = 2
pixel_size = 0.004
billboard = 2
shaded = true
alpha_cut = 1
texture_filter = 0
texture = ExtResource("3_ovfvl")

[node name="Shadow" type="Decal" parent="Animal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.783627, 0)
size = Vector3(2, 1, 2)
texture_albedo = ExtResource("4_dtwva")
lower_fade = 0.439226
distance_fade_begin = 3.4
distance_fade_length = 13.5
cull_mask = 1048573

[node name="Pet" type="Sprite3D" parent="."]
visible = false
layers = 2
flip_h = true
pixel_size = 0.004
billboard = 2
shaded = true
alpha_cut = 1
texture_filter = 0
texture = ExtResource("3_ovfvl")

[node name="Shadow" type="Decal" parent="Pet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.783627, 0)
size = Vector3(2, 1, 2)
texture_albedo = ExtResource("4_dtwva")
lower_fade = 0.439226
distance_fade_begin = 3.4
distance_fade_length = 13.5
cull_mask = 1048573

[node name="HealParticles" type="GPUParticles3D" parent="Pet"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1259, 0.599604, -0.447513)
layers = 2
emitting = false
lifetime = 3.0
one_shot = true
randomness = 0.42
process_material = SubResource("ParticleProcessMaterial_vqhsh")
draw_pass_1 = SubResource("QuadMesh_b65ge")

[node name="AnimalPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.02879, 0.0145887, -2.72723)

[node name="PlayerPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32812, 0.49536, 2.62746)

[node name="AnimalBitePoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.869, 0.015, 1.978)

[node name="CameraInteractPoint" type="Marker3D" parent="."]
transform = Transform3D(0.38107, 0.0661027, 0.922179, 0, 0.997441, -0.0714974, -0.924546, 0.0272455, 0.380094, 0.813, 0.19, -1.019)

[node name="CameraPoint" type="Marker3D" parent="."]
transform = Transform3D(0.38107, 0.0661027, 0.922179, 0, 0.997441, -0.0714974, -0.924546, 0.0272456, 0.380095, 5.728, 0.015, 2.786)

[node name="Camera" type="Camera3D" parent="CameraPoint"]
fov = 45.0

[node name="RotationPoint" type="Marker3D" parent="CameraPoint"]
transform = Transform3D(0.173648, 0.492404, -0.852868, 0, 0.866025, 0.5, 0.984808, -0.0868241, 0.150384, 0, 0, 0)

[node name="StickerbookPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.999999, 5.847, -0.323, 2.184)

[node name="Book" type="AnimatedSprite3D" parent="StickerbookPoint"]
visible = false
layers = 2
pixel_size = 0.001
billboard = 1
shaded = true
alpha_cut = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_mu7b8")
animation = &"open"

[node name="PlayerInteractPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.732, 0.495, -1.643)

[node name="PetInteractPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.732, 0.00841856, -1.643)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
